<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.busline_aition_fragment.MeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_me_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bg_white"
            android:gravity="center"
            style="@style/tv_title_actionbar"
            android:text="@string/tab_me" />

        <TextView
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/list_line" />

        <TextView
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/fengexian_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/divider"
            android:background="@color/bg_white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="12dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ico_emptyphoto_me" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_me_unlogin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_me_afterlogin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ico_synchronous_disable" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/fragment_me_synchronous" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fengexian_color" />

        <TextView
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/fengexian_color" />

        <LinearLayout
            android:id="@+id/ll_choose_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_me_choose_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/fragment_me_choose_city" />

            <TextView
                android:id="@+id/tv_me_show_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bg_green_normal"
                android:text="厦门"
                android:layout_margin="12dp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="12dp"
                android:src="@mipmap/ico_detail_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fengexian_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_me_offline_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/fragment_me_offline_map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="12dp"
                android:src="@mipmap/ico_detail_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fengexian_color" />

        <TextView
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/fengexian_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_me_msgnotifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/fragment_me_msgnotifi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="12dp"
                android:src="@mipmap/ico_detail_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fengexian_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_me_getoff_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/fragment_me_getoff_remind" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="12dp"
                android:src="@mipmap/ico_detail_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fengexian_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_me_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/fragment_me_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="12dp"
                android:src="@mipmap/ico_detail_gray" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_for_login"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_transparent_black"
            android:layout_above="@+id/ll_login"/>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="12dp"
                    android:src="@mipmap/ico_photo_weixin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_me_login_weixin" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/fengexian_color" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="12dp"
                    android:src="@mipmap/ico_photo_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_me_login_qq" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/fengexian_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:textColor="@color/bg_red"
                android:text="@string/fragment_me_cancel"/>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
