<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context="com.example.administrator.busline_aition_fragment.CollectionFragment">

    <LinearLayout
        android:id="@+id/ll_collection_titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_collection_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@mipmap/icon_alert_disable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/tv_title_actionbar"
            android:text="@string/tab_collection" />

        <ImageView
            android:id="@+id/iv_collection_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@drawable/collection_add_selector" />
    </LinearLayout>

    <TextView
        android:id="@+id/lineforpop"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_collection_titlebar"
        android:background="@color/fengexian_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_collection_titlebar"
        android:layout_marginTop="10dp"
        android:background="@color/fengexian_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_collection_titlebar"
        android:layout_marginTop="10dp"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_collection_hint" />

        <TextView
            android:id="@+id/btn_collection_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/collection_btn_selector"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/fragment_collection_add"
            android:textColor="@color/bg_white" />
    </LinearLayout>

</RelativeLayout>
